--- a/parts/adaproject/kdevadaproject.desktop
+++ b/parts/adaproject/kdevadaproject.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ada Project
-Comment[fr]=Un module externe pour la gestion de projet avec le langage ADA.
+Comment[hu]=Ada projekt
+Comment[pt_BR]=Projeto Ada
+Comment[sv]=Ada-projekt
+Comment[xx]=xxAda Projectxx
 Name=KDevAdaProject
+Name[sv]=KDevelop Ada-projekt
+Name[xx]=xxKDevAdaProjectxx
 GenericName=Ada Project
-GenericName[fr]=Projet avec ADA
+GenericName[hu]=Ada projekt
+GenericName[pt_BR]=Projeto Ada
+GenericName[sv]=Ada-projekt
+GenericName[xx]=xxAda Projectxx
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevadaproject
+X-KDevelop-Version=1
 X-KDevelop-Language=Ada
