--- a/parts/adasupport/kdevadasupport.desktop
+++ b/parts/adasupport/kdevadasupport.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ada Language Support
-Comment[fr]=Un module externe pour la gestion du langage ADA.
+Comment[hu]=Ada nyelvi támogatás
+Comment[pt_BR]=Suporte à Linguagem Ada
+Comment[sv]=Stöd för språket Ada
+Comment[xx]=xxAda Language Supportxx
 Name=KDevAdaSupport
+Name[sv]=KDevelop Ada-stöd
+Name[xx]=xxKDevAdaSupportxx
 GenericName=Ada Language Support
-GenericName[fr]=Langage ADA
+GenericName[hu]=Ada-támogatás
+GenericName[pt_BR]=Suporte à Linguagem Ada
+GenericName[sv]=Stöd för språket Ada
+GenericName[xx]=xxAda Language Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevadasupport
+X-KDevelop-Version=1
 X-KDevelop-Language=Ada
