--- a/parts/antproject/kdevantproject.desktop
+++ b/parts/antproject/kdevantproject.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ant Project
-Comment[fr]=Un module externe pour la gestion de projet avec le programme « Ant ».
+Comment[hu]=Ant projekt
+Comment[pt_BR]=Projeto Ant
+Comment[sv]=Ant-projekt
+Comment[xx]=xxAnt Projectxx
 Name=KDevAntProject
+Name[sv]=KDevelop Ant-projekt
+Name[xx]=xxKDevAntProjectxx
 GenericName=Ant Project
-GenericName[fr]=Projet avec Ant
+GenericName[hu]=Ant projekt
+GenericName[pt_BR]=Projeto Ant
+GenericName[sv]=Ant-projekt
+GenericName[xx]=xxAnt Projectxx
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevantproject
+X-KDevelop-Version=1
 X-KDevelop-Args=
