--- a/parts/autoproject/kdevautoproject.desktop
+++ b/parts/autoproject/kdevautoproject.desktop
@@ -3,10 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Automake Project
-Comment[fr]=Un module externe pour la gestion de projet avec le programme « Automake ».
+Comment[hu]=Automake-projekt
+Comment[pt_BR]=Projeto Automake
+Comment[sv]=Automake-projekt
+Comment[xx]=xxAutomake Projectxx
 Name=KDevAutoProject
+Name[pt_BR]=KDevAutoProjeto
+Name[sv]=KDevelop autoprojekt
+Name[xx]=xxKDevAutoProjectxx
 GenericName=Automake Project
-GenericName[fr]=Projet avec Automake
+GenericName[hu]=Automake-projekt
+GenericName[pt_BR]=Projeto Automake
+GenericName[sv]=Automake-projekt
+GenericName[xx]=xxAutomake Projectxx
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
+X-KDevelop-Version=1
 X-KDevelop-Args=
