--- a/parts/autoproject/kdevkdeautoproject.desktop
+++ b/parts/autoproject/kdevkdeautoproject.desktop
@@ -3,10 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=KDE Automake Project
-Comment[fr]=Un module externe pour la gestion de projet avec le programme « Automake » pour les applications KDE.
+Comment[hu]=KDE Automake-projekt
+Comment[pt_BR]=Projeto Automake do KDE
+Comment[sv]=KDE Automake-projekt
+Comment[xx]=xxKDE Automake Projectxx
 Name=KDevKDEAutoProject
+Name[pt_BR]=KDevKDEAutoProjeto
+Name[sv]=KDevelop KDE-autoprojekt
+Name[xx]=xxKDevKDEAutoProjectxx
 GenericName=KDE Automake Project
-GenericName[fr]=Projet avec Automake pour KDE
+GenericName[hu]=KDE Automake-projekt
+GenericName[pt_BR]=Projeto Automake do KDE
+GenericName[sv]=KDE Automake-projekt
+GenericName[xx]=xxKDE Automake Projectxx
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevautoproject
+X-KDevelop-Version=1
 X-KDevelop-Args=kde
