--- a/parts/bookmarks/kdevpart_bookmarks.desktop
+++ b/parts/bookmarks/kdevpart_bookmarks.desktop
@@ -3,13 +3,12 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Plugin that provides navigation and overview of active source bookmarks and persists them between sessions.
-Comment[xx]=xxPlugin that provides navigation and overview of active source bookmarks and persists them between sessions.xx
 Name=KDevBookmarks
 Name[sv]=KDevelop bokmärken
 Name[xx]=xxKDevBookmarksxx
 GenericName=Bookmarks
-GenericName[xx]=xxBookmarksxx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Project
 X-KDE-Library=libkdevbookmarks
+X-KDevelop-Version=1
