--- a/parts/classbrowser/kdevpart_classbrowser.desktop
+++ b/parts/classbrowser/kdevpart_classbrowser.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=ClassBrowser
-Comment[fr]=Un module externe pour la gestion de l'afficheur de classes.
+Comment[hu]=Osztályböngésző
+Comment[pt_BR]=Navegador de Classe
+Comment[sv]=Klassbläddrare
+Comment[xx]=xxClassBrowserxx
 Name=KDevClassBrowser
+Name[sv]=KDevelop klassbläddrare
+Name[xx]=xxKDevClassBrowserxx
 GenericName=ClassBrowser
-GenericName[fr]=Afficheur de classes
+GenericName[hu]=osztályböngésző
+GenericName[pt_BR]=Navegador de Classe
+GenericName[sv]=Klassbläddrare
+GenericName[xx]=xxClassBrowserxx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Project
 X-KDE-Library=libkdevclassbrowser
+X-KDevelop-Version=1
