--- a/parts/clearcase/kdevclearcase.desktop
+++ b/parts/clearcase/kdevclearcase.desktop
@@ -3,10 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=A plugin that provides support for Rational ClearCase, a large version control and build management system. http://www.rational.com/products/clearcase/index.jsp
-Comment[hu]=Bővítőmodul a Rational ClearCase-hez (ez egy komplex verziókövető rendszer) http://www.rational.com/products/clearcase/index.jsp
-Comment[pt_BR]=Um plugin que fornece suporte para o Rational ClearCase, um sistema de gerenciamento de compilação e controle de versão. http://www.rational.com/products/clearcase/index.jsp
-Comment[sv]=Ett insticksprogram som stöder Rational ClearCase, ett omfattande versions- och bygghanteringssystem. http://www.rational.com/products/clearcase/index.jsp
-Comment[xx]=xxA plugin that provides support for Rational ClearCase, a large version control and build management system. http://www.rational.com/products/clearcase/index.jspxx
 Name=KDevClearCase
 Name[sv]=KDevelop ClearCase
 Name[xx]=xxKDevClearCasexx
@@ -17,4 +13,5 @@ GenericName[sv]=Integrering av ClearCase
 GenericName[xx]=xxClearCase Integrationxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevclearcase
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
