--- a/parts/cppsupport/kdevcsupport.desktop
+++ b/parts/cppsupport/kdevcsupport.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=C Support
-Comment[fr]=Un module externe pour la gestion du langage C.
+Comment[hu]=C-támogatás
+Comment[pt_BR]=Suporte ao C
+Comment[sv]=C-stöd
+Comment[xx]=xxC Supportxx
 Name=KDevCppSupport
+Name[sv]=KDevelop C++ stöd
+Name[xx]=xxKDevCppSupportxx
 GenericName=C Support
-GenericName[fr]=Gestion du C
+GenericName[hu]=C-támogatás
+GenericName[pt_BR]=Suporte ao C
+GenericName[sv]=C-stöd
+GenericName[xx]=xxC Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevcppsupport
+X-KDevelop-Version=1
 X-KDevelop-Language=C
 X-KDevelop-Args=C
