--- a/parts/ctags/kdevctags.desktop
+++ b/parts/ctags/kdevctags.desktop
@@ -3,10 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CTags is a source navigation tool with support for many languages. When loaded it provides a context menu for finding type declarations/definitions and also a query dialog in the Tools menu. http://ctags.sourceforge.net/
-Comment[hu]=A CTags egy forrásnavigáció eszköz, mely többféle nyelvet is támogat. Lehetővé teszi felbukkanó menüből típusdeklarációk és -megvalósítások keresését, lekérdezését (az Eszköz menübe kerül). http://ctags.sourceforge.net/
-Comment[pt_BR]=CTags é uma ferramenta de navegação de código com suporte para muitas linguagens. Quando carregada ela oferece um menu de contexto para encontrar declarações/definições de tipo e também um diálogo de consulta no menu Ferramentas. http://ctags.sourceforge.net/
-Comment[sv]=Ctags är ett verktyg för källkodsnavigering med stöd för många språk. När det laddats tillhandahåller det en sammanhangsberoende meny för att hitta typdeklarationer eller definitioner, och dessutom en frågedialogruta i verktygsmenyn. http://ctags.sourceforge.net/
-Comment[xx]=xxCTags is a source navigation tool with support for many languages. When loaded it provides a context menu for finding type declarations/definitions and also a query dialog in the Tools menu.http://ctags.sourceforge.net/xx
 Name=KDevCTags
 Name[sv]=KDevelop ctags
 Name[xx]=xxKDevCTagsxx
@@ -17,4 +13,5 @@ GenericName[sv]=Ctags-gränssnitt
 GenericName[xx]=xxCTags Frontendxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevctags
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
