--- a/parts/customproject/kdevcustomproject.desktop
+++ b/parts/customproject/kdevcustomproject.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Custom Project
-Comment[fr]=Un module externe pour la gestion de projet personnalisé.
+Comment[hu]=Egyedi projekt
+Comment[pt_BR]=Projeto Personalizado
+Comment[sv]=Eget projekt
+Comment[xx]=xxCustom Projectxx
 Name=KDevCustomProject
+Name[sv]=KDevelop eget projekt
+Name[xx]=xxKDevCustomProjectxx
 GenericName=Custom Project
-GenericName[fr]=Projet personnalisé
+GenericName[hu]=egyedi projekt
+GenericName[pt_BR]=Projeto Personalizado
+GenericName[sv]=Eget projekt
+GenericName[xx]=xxCustom Projectxx
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevcustomproject
+X-KDevelop-Version=1
 X-KDevelop-Args=
