--- a/parts/cvs/kdevcvs.desktop
+++ b/parts/cvs/kdevcvs.desktop
@@ -3,7 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=CVS is a version control system, which allows you to keep old versions of files, keep a log of who, when, and why changes occurred. http://www.cvshome.org/
-Comment[xx]=xxCVS is a version control system, which allows you to keep old versions of files, keep a log of who, when, and why changes occurred. http://www.cvshome.org/xx
 Name=CVS
 Name[xx]=xxCVSxx
 GenericName=CVS Integration
@@ -13,4 +12,5 @@ GenericName[sv]=Integrering av CVS
 GenericName[xx]=xxCVS Integrationxx
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvs
+X-KDevelop-Version=1
 X-KDevelop-Scope=Global
