--- a/parts/debugger/kdevdebugger.desktop
+++ b/parts/debugger/kdevdebugger.desktop
@@ -3,10 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin provides a frontend for GDB, a source-level debugger for C, C++ and more. http://sources.redhat.com/gdb/
-Comment[hu]=Ez a bővítőmodul grafikus felületet biztosít a GDB nyomkövető használatához, C/C++ és más nyelvekhez, forrásszinten. http://sources.redhat.com/gdb/
-Comment[pt_BR]=Este plugin fornece um frontend para o GDB, um depurador a nível de código para C, C++ e mais. http://sources.redhat.com/gdb/
-Comment[sv]=Insticksprogrammet tillhandahåller ett gränssnitt till GDB, en källkodsavlusare för C, C++ med mera. http://sources.redhat.com/gdb/
-Comment[xx]=xxThis plugin provides a frontend for GDB, a source-level debugger for C, C++ and more. http://sources.redhat.com/gdb/xx
 Name=KDevDebugger
 Name[sv]=KDevelop avlusare
 Name[xx]=xxKDevDebuggerxx
@@ -18,5 +14,6 @@ GenericName[xx]=xxDebugger Frontendxx
 Icon=
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevdebugger
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
 X-KDevelop-ProgrammingLanguages=C,C++
