--- a/parts/fileview/kdevfilegroups.desktop
+++ b/parts/fileview/kdevfilegroups.desktop
@@ -3,7 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Allows for grouping of project files according to filename patterns.
-Comment[xx]=xxAllows for grouping of project files according to filename patterns.xx
 Name=KDevFileGroups
 Name[sv]=KDevelop filgrupper
 Name[xx]=xxKDevFileGroupsxx
@@ -14,4 +13,5 @@ GenericName[sv]=Filgrupper
 GenericName[xx]=xxFile Groupsxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfilegroups
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
