--- a/parts/fileview/kdevfileview.desktop
+++ b/parts/fileview/kdevfileview.desktop
@@ -3,7 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Provides a way of navigating and interacting with the source files of the current project.
-Comment[xx]=xxProvides a way of navigating and interacting with the source files of the current project.xx
 Name=KDevFileView
 Name[sv]=KDevelop filvisning
 Name[xx]=xxKDevFileViewxx
@@ -14,4 +13,5 @@ GenericName[sv]=Filträd
 GenericName[xx]=xxFile Treexx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfileview
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
