--- a/parts/fortransupport/kdevfortransupport.desktop
+++ b/parts/fortransupport/kdevfortransupport.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Fortran 77 Support
-Comment[fr]=Un module externe pour la gestion du langage FORTRAN 77.
+Comment[hu]=Fortran 77-támogatás
+Comment[pt_BR]=Suporte ao Fortran 77
+Comment[sv]=Fortran 77-stöd
+Comment[xx]=xxFortran 77 Supportxx
 Name=KDevFortran77Support
+Name[sv]=KDevelop Fortran 77-stöd
+Name[xx]=xxKDevFortran77Supportxx
 GenericName=Fortran 77 Support
-GenericName[fr]=Langage FORTRAN 77
+GenericName[hu]=Fortran 77-támogatás
+GenericName[pt_BR]=Suporte ao Fortran 77
+GenericName[sv]=Fortran 77-stöd
+GenericName[xx]=xxFortran 77 Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevfortransupport
+X-KDevelop-Version=1
 X-KDevelop-Language=Fortran77
