--- a/parts/outputviews/kdevappoutputview.desktop
+++ b/parts/outputviews/kdevappoutputview.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Application Output View
-Comment[fr]=Un module externe pour la gestion de l'affichage des messages  texte d'une application.
+Comment[hu]=Alkalmazáskimenet-megjelenítő
+Comment[pt_BR]=Visão da Saída do Aplicativo
+Comment[sv]=Programutmatningsvy
+Comment[xx]=xxApplication Output Viewxx
 Name=KDevAppOutputView
+Name[sv]=KDevelop programutmatningsvy
+Name[xx]=xxKDevAppOutputViewxx
 GenericName=Application Output View
-GenericName[fr]=Messages d'une application
+GenericName[hu]=alkalmazáskimenet-megjelenítő
+GenericName[pt_BR]=Visão da Saída do Aplicativo
+GenericName[sv]=Programutmatningsvy
+GenericName[xx]=xxApplication Output Viewxx
 Icon=exec
 ServiceTypes=KDevelop/AppFrontend
 X-KDE-Library=libkdevoutputviews
+X-KDevelop-Version=1
