--- a/parts/outputviews/kdevmakeview.desktop
+++ b/parts/outputviews/kdevmakeview.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Compiler Frontend
-Comment[fr]=Un module externe pour la gestion de l'interface avec un compilateur.
+Comment[hu]=Grafikus kezelőprogram fordítóprogramokhoz
+Comment[pt_BR]=Frontend do Compilador
+Comment[sv]=Kompilatorgränssnitt
+Comment[xx]=xxCompiler Frontendxx
 Name=KDevMakeView
+Name[sv]=KDevelop byggvy
+Name[xx]=xxKDevMakeViewxx
 GenericName=Compiler Frontend
-GenericName[fr]=Interface pour compilateur
+GenericName[hu]=grafikus kezelőfelület fordítóprogramokhoz
+GenericName[pt_BR]=Frontend do Compilador
+GenericName[sv]=Kompilatorgränssnitt
+GenericName[xx]=xxCompiler Frontendxx
 Icon=konsole
 ServiceTypes=KDevelop/MakeFrontend
 X-KDE-Library=libkdevoutputviews
+X-KDevelop-Version=1
