--- a/parts/pascalproject/kdevpascalproject.desktop
+++ b/parts/pascalproject/kdevpascalproject.desktop
@@ -3,9 +3,18 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Pascal Project
-Comment[fr]=Un module externe pour la gestion de projet avec le langage PASCAL.
+Comment[hu]=Pascal projekt
+Comment[pt_BR]=Projeto Pascal
+Comment[sv]=Pascal-projekt
+Comment[xx]=xxPascal Projectxx
 Name=KDevPascalProject
+Name[sv]=KDevelop Pascal-projekt
+Name[xx]=xxKDevPascalProjectxx
 GenericName=Pascal Project
-GenericName[fr]=Projet avec PASCAL
+GenericName[hu]=Pascal projekt
+GenericName[pt_BR]=Projeto Pascal
+GenericName[sv]=Pascal-projekt
+GenericName[xx]=xxPascal Projectxx
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevpascalproject
+X-KDevelop-Version=1
