--- a/parts/pascalsupport/kdevpascalsupport.desktop
+++ b/parts/pascalsupport/kdevpascalsupport.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Pascal Language Support
-Comment[fr]=Un module externe pour la gestion du langage PASCAL.
+Comment[hu]=Támogatás a Pascal nyelv használatához
+Comment[pt_BR]=Suporte à Linguagem Pascal
+Comment[sv]=Stöd för språket Pascal
+Comment[xx]=xxPascal Language Supportxx
 Name=KDevPascalSupport
+Name[sv]=KDevelop Pascal-stöd
+Name[xx]=xxKDevPascalSupportxx
 GenericName=Pascal Language Support
-GenericName[fr]=Langage PASCAL
+GenericName[hu]=Pascal-támogatás
+GenericName[pt_BR]=Suporte à Linguagem Pascal
+GenericName[sv]=Stöd för språket Pascal
+GenericName[xx]=xxPascal Language Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevpascalsupport
+X-KDevelop-Version=1
 X-KDevelop-Language=Pascal
