--- a/parts/perforce/kdevperforce.desktop
+++ b/parts/perforce/kdevperforce.desktop
@@ -3,7 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Integrates Perforce, a software configuration management system. http://www.perforce.com/
-Comment[xx]=xxIntegrates Perforce, a software configuration management system. http://www.perforce.com/xx
 Name=KDevPerforce
 Name[sv]=KDevelop Perforce
 Name[xx]=xxKDevPerforcexx
@@ -14,4 +13,5 @@ GenericName[sv]=Integrering av Perforce
 GenericName[xx]=xxPerforce Integrationxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevperforce
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
