--- a/parts/perlsupport/kdevperlsupport.desktop
+++ b/parts/perlsupport/kdevperlsupport.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Perl Support
-Comment[fr]=Un module externe pour la gestion du langage PERL.
+Comment[hu]=Perl-támogatás
+Comment[pt_BR]=Suporte ao Perl
+Comment[sv]=Perl-stöd
+Comment[xx]=xxPerl Supportxx
 Name=KDevPerlSupport
+Name[sv]=KDevelop Perl-stöd
+Name[xx]=xxKDevPerlSupportxx
 GenericName=Perl Support
-GenericName[fr]=Langage PERL
+GenericName[hu]=Perl-támogatás
+GenericName[pt_BR]=Suporte ao Perl
+GenericName[sv]=Perl-stöd
+GenericName[xx]=xxPerl Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevperlsupport
+X-KDevelop-Version=1
 X-KDevelop-Language=Perl
 
