--- a/parts/phpsupport/kdevphpsupport.desktop
+++ b/parts/phpsupport/kdevphpsupport.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=PHP Support
-Comment[fr]=Un module externe pour la gestion du langage PHP.
+Comment[hu]=PHP-támogatás
+Comment[pt_BR]=Suporte ao PHP
+Comment[sv]=PHP-stöd
+Comment[xx]=xxPHP Supportxx
 Name=KDevPHPSupport
+Name[sv]=KDevelop PHP-stöd
+Name[xx]=xxKDevPHPSupportxx
 GenericName=PHP Support
-GenericName[fr]=Langage PHP
+GenericName[hu]=PHP-támogatás
+GenericName[pt_BR]=Suporte ao PHP
+GenericName[sv]=PHP-stöd
+GenericName[xx]=xxPHP Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevphpsupport
+X-KDevelop-Version=1
 X-KDevelop-Language=PHP
 
