--- a/parts/pythonsupport/kdevpythonsupport.desktop
+++ b/parts/pythonsupport/kdevpythonsupport.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Python Support
-Comment[fr]=Un module externe pour la gestion du langage PYTHON.
+Comment[hu]=Python-támogatás
+Comment[pt_BR]=Suporte ao Python
+Comment[sv]=Python-stöd
+Comment[xx]=xxPython Supportxx
 Name=KDevPythonSupport
+Name[sv]=KDevelop Python-stöd
+Name[xx]=xxKDevPythonSupportxx
 GenericName=Python Support
-GenericName[fr]=Langage PYTHON
+GenericName[hu]=Python-támogatás
+GenericName[pt_BR]=Suporte ao Python
+GenericName[sv]=Python-stöd
+GenericName[xx]=xxPython Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevpythonsupport
+X-KDevelop-Version=1
 X-KDevelop-Language=Python
