--- a/parts/qeditor/qeditor_part.desktop
+++ b/parts/qeditor/qeditor_part.desktop
@@ -1,11 +1,22 @@
 [Desktop Entry]
 Encoding=UTF-8
 Comment=Qt Designer Based Text Editor
-Comment[fr]=Un module externe pour la gestion de l'Èditeur de texte ´ qeditor ª basÈ sur l'application ´ Qt Designer ª.
+Comment[hu]=Qt Designer-alap√∫ sz√∂vegszerkeszt≈ë
+Comment[pt_BR]=Editor de Texto Baseado no Qt Designer
+Comment[sv]=Qt Designer-baserad texteditor
+Comment[xx]=xxQt Designer Based Text Editorxx
 Name=Qt Designer Based Text Editor
+Name[hu]=Qt Designer-alap√∫ sz√∂vegszerkeszt≈ë
+Name[pt_BR]=Editor de Texto Baseado no Qt Designer
+Name[sv]=Qt Designer-baserad texteditor
+Name[xx]=xxQt Designer Based Text Editorxx
 GenericName=QEditor Support
-GenericName[fr]=Editeur QEditor
+GenericName[hu]=QEditor-t√°mogat√°s
+GenericName[pt_BR]=Suporte ao QEditor
+GenericName[sv]=Qeditor-st√∂d
+GenericName[xx]=xxQEditor Supportxx
 MimeType=text/english;text/plain;text/x-makefile;text/x-c++hdr;text/x-c++src;text/x-chdr;text/x-csrc;text/x-java;text/x-moc;text/x-pascal;text/x-tcl;text/x-tex;application/x-shellscript;text/x-c;text/x-c++;text/x-sql;
 ServiceTypes=KParts/ReadOnlyPart,KParts/ReadWritePart,KTextEditor/Document,KTextEditor/Editor
 X-KDE-Library=libqeditorpart
+X-KDevelop-Version=1
 Type=Service
