--- a/parts/rubysupport/kdevrubysupport.desktop
+++ b/parts/rubysupport/kdevrubysupport.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Ruby Support
-Comment[fr]=Un module externe pour la gestion du langage RUBY.
+Comment[hu]=Ruby-támogatás
+Comment[pt_BR]=Suporte ao Ruby
+Comment[sv]=Ruby-stöd
+Comment[xx]=xxRuby Supportxx
 Name=KDevRubySupport
+Name[sv]=KDevelop Ruby-stöd
+Name[xx]=xxKDevRubySupportxx
 GenericName=Ruby Support
-GenericName[fr]=Langage RUBY
+GenericName[hu]=Ruby-támogatás
+GenericName[pt_BR]=Suporte ao Ruby
+GenericName[sv]=Ruby-stöd
+GenericName[xx]=xxRuby Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevrubysupport
+X-KDevelop-Version=1
 X-KDevelop-Language=Ruby
