--- a/parts/scripting/kdevscripting.desktop
+++ b/parts/scripting/kdevscripting.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Python Scripting Interface
-Comment[fr]=Un module externe pour la gestion de scripts avec le langage PYTHON.
+Comment[hu]=Python szkriptelési felület
+Comment[pt_BR]=Interface para Script Python
+Comment[sv]=Python skriptgränssnitt
+Comment[xx]=xxPython Scripting Interfacexx
 Name=KDevScripting
+Name[sv]=KDevelop skripthantering
+Name[xx]=xxKDevScriptingxx
 GenericName=Python Scripting Interface
-GenericName[fr]=Interface PYTHON
+GenericName[hu]=Python szkriptelési felület
+GenericName[pt_BR]=Interface para Script Python
+GenericName[sv]=Python skriptgränssnitt
+GenericName[xx]=xxPython Scripting Interfacexx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevscripting
+X-KDevelop-Version=1
 X-KDevelop-Scope=Global
 
