--- a/parts/scriptproject/kdevscriptproject.desktop
+++ b/parts/scriptproject/kdevscriptproject.desktop
@@ -3,9 +3,18 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Scripting Language Project
-Comment[fr]=Un module externe pour la gestion de projets avec les langages de scripts.
+Comment[hu]=Szkript-projekt
+Comment[pt_BR]=Projeto de Linguagem de Script
+Comment[sv]=Projekt för skriptspråk
+Comment[xx]=xxScripting Language Projectxx
 Name=KDevScriptProject
+Name[sv]=KDevelop skriptprojekt
+Name[xx]=xxKDevScriptProjectxx
 GenericName=Scripting Language Project
-GenericName[fr]=Projet avec langages scripts
+GenericName[hu]=szkriptprojekt
+GenericName[pt_BR]=Projeto de Linguagem de Script
+GenericName[sv]=Projekt för skriptspråk
+GenericName[xx]=xxScripting Language Projectxx
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevscriptproject
+X-KDevelop-Version=1
