--- a/parts/sourcenav/kdevpart_sourcenav.desktop
+++ b/parts/sourcenav/kdevpart_sourcenav.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Source Code Navigation
-Comment[fr]=Un module externe pour la gestion d'un navigateur de codes sources.
+Comment[hu]=Forráskód-navigáció
+Comment[pt_BR]=Navegação de Código Fonte
+Comment[sv]=Källkodsnavigering
+Comment[xx]=xxSource Code Navigationxx
 Name=KDevSourceNav
+Name[sv]=KDevelop källkodsnavigering
+Name[xx]=xxKDevSourceNavxx
 GenericName=Source Code Navigation
-GenericName[fr]=Navigation dans code source
+GenericName[hu]=forráskód-navigáció
+GenericName[pt_BR]=Navegação de Código Fonte
+GenericName[sv]=Källkodsnavigering
+GenericName[xx]=xxSource Code Navigationxx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevsourcenav
+X-KDevelop-Version=1
 X-KDevelop-Scope=Global
