--- a/parts/sqlsupport/kdevsqlsupport.desktop
+++ b/parts/sqlsupport/kdevsqlsupport.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=SQL Support
-Comment[fr]=Un module externe pour la gestion du langage SQL.
+Comment[hu]=SQL-támogatás
+Comment[pt_BR]=Suporte ao SQL
+Comment[sv]=SQL-stöd
+Comment[xx]=xxSQL Supportxx
 Name=KDevSQLSupport
+Name[sv]=KDevelop SQL-stöd
+Name[xx]=xxKDevSQLSupportxx
 GenericName=SQL Support
-GenericName[fr]=Langage SQL
+GenericName[hu]=SQL-támogatás
+GenericName[pt_BR]=Suporte ao SQL
+GenericName[sv]=SQL-stöd
+GenericName[xx]=xxSQL Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevsqlsupport
+X-KDevelop-Version=1
 X-KDevelop-Language=SQL
