--- a/parts/svn/kdevpart_svn.desktop
+++ b/parts/svn/kdevpart_svn.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Subversion Integration
-Comment[fr]=Un module externe qui gÈre le programme ´ SubVersion ª pour la gestion des versions de codes sources (similaire ‡ CVS).
+Comment[hu]=Subversion-integr√°ci√≥
+Comment[pt_BR]=Integra√ß√£o de Subvers√£o
+Comment[sv]=Integrering av delversion
+Comment[xx]=xxSubversion Integrationxx
 Name=KDevsvn
+Name[sv]=KDevelop delversion
+Name[xx]=xxKDevsvnxx
 GenericName=Subversion Integration
-GenericName[fr]=IntÈgration de ´ SubVersion ª
+GenericName[hu]=Subversion-integr√°ci√≥
+GenericName[pt_BR]=Integra√ß√£o de Subvers√£o
+GenericName[sv]=Integrering av delversion
+GenericName[xx]=xxSubversion Integrationxx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevsvn
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
