--- a/parts/texttools/kdevtexttools.desktop
+++ b/parts/texttools/kdevtexttools.desktop
@@ -3,10 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Text Tools
-Comment[fr]=Un module externe pour la gestion d'outils pour le texte.
+Comment[hu]=Szövegkezelő eszközök
+Comment[pt_BR]=Ferramentas de Texto
+Comment[sv]=Textverktyg
+Comment[xx]=xxText Toolsxx
 Name=KDevTextTools
+Name[sv]=KDevelop textverktyg
+Name[xx]=xxKDevTextToolsxx
 GenericName=Text Tools
-GenericName[fr]=Outils pour le texte
+GenericName[hu]=szövegkezelők
+GenericName[pt_BR]=Ferramentas de Texto
+GenericName[sv]=Textverktyg
+GenericName[xx]=xxText Toolsxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevtexttools
+X-KDevelop-Version=1
 X-KDevelop-Scope=Global
