--- a/parts/trollproject/kdevtrollproject.desktop
+++ b/parts/trollproject/kdevtrollproject.desktop
@@ -2,10 +2,19 @@
 Type=Service
 Exec=blubb
 Comment=QMake Project
-Comment[fr]=Un module externe pour la gestion de projet avec le programme « QMake ».
+Comment[hu]=QMake-projekt
+Comment[pt_BR]=Projeto QMake
+Comment[sv]=Qmake-projekt
+Comment[xx]=xxQMake Projectxx
 Name=KDevTrollProject
+Name[sv]=KDevelop Troll-projekt
+Name[xx]=xxKDevTrollProjectxx
 GenericName=QMake Project
-GenericName[fr]=Projet avec QMake
+GenericName[hu]=QMake-projekt
+GenericName[pt_BR]=Projeto QMake
+GenericName[sv]=Qmake-projekt
+GenericName[xx]=xxQMake Projectxx
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevtrollproject
+X-KDevelop-Version=1
 X-KDevelop-Args=
