--- a/parts/visualboyadvance/kdevpart_visualboyadvance.desktop
+++ b/parts/visualboyadvance/kdevpart_visualboyadvance.desktop
@@ -3,7 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=VisualBoyAdvance is a GameBoyAdvance emulator. http://vboy.emuhq.com/
-Comment[xx]=xxVisualBoyAdvance is a GameBoyAdvance emulator. http://vboy.emuhq.com/xx
 Name=KDevVisualBoyAdvance
 Name[sv]=KDevelop Visual Boy Advance
 Name[xx]=xxKDevVisualBoyAdvancexx
@@ -15,6 +14,7 @@ GenericName[xx]=xxVisualBoyAdvance supportxx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevvisualboyadvance
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
 Keywords=GBA
 Keywords[xx]=xxGBAxx
