--- a/plugins/dccoptions/kdevdccoptions.desktop
+++ b/plugins/dccoptions/kdevdccoptions.desktop
@@ -3,8 +3,15 @@ Encoding=UTF-8
 Type=Service
 Exec=dcc
 Comment=Borland Delphi Compiler
+Comment[hu]=Borland Delphi fordítóprogram
+Comment[pt_BR]=Compilador Delphi da Borland Delphi
+Comment[sv]=Borland Delphi kompilator
+Comment[xx]=xxBorland Delphi Compilerxx
 Name=DccOptions
+Name[sv]=Alternativ för dcc
+Name[xx]=xxDccOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevdccoptions
+X-KDevelop-Version=1
 X-KDevelop-Language=Pascal
 X-KDevelop-Args=dcc
