--- a/plugins/fpcoptions/kdevfpcoptions.desktop
+++ b/plugins/fpcoptions/kdevfpcoptions.desktop
@@ -3,9 +3,16 @@ Encoding=UTF-8
 Type=Service
 Exec=fpc
 Comment=Free Pascal Compiler
+Comment[hu]=Szabad forráskódú Pascal fordítóprogram
+Comment[pt_BR]=Compilador Free Pascal
+Comment[sv]=Fri Pascal-kompilator
+Comment[xx]=xxFree Pascal Compilerxx
 Name=FpcOptions
+Name[sv]=Alternativ för fpc
+Name[xx]=xxFpcOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevfpcoptions
+X-KDevelop-Version=1
 X-KDevelop-Language=Pascal
 X-KDevelop-Args=fpc
 X-KDevelop-Default=true
