--- a/plugins/gccoptions/kdevg77options.desktop
+++ b/plugins/gccoptions/kdevg77options.desktop
@@ -3,9 +3,16 @@ Encoding=UTF-8
 Type=Service
 Exec=g77
 Comment=GNU Fortran 77 Compiler
+Comment[hu]=GNU Fortran 77 fordítóprogram
+Comment[pt_BR]=Compilador GNU Fortran 77
+Comment[sv]=GNU Fortran 77-compilator
+Comment[xx]=xxGNU Fortran 77 Compilerxx
 Name=G77Options
+Name[sv]=Alternativ för g77
+Name[xx]=xxG77Optionsxx
 ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevgccoptions
+X-KDevelop-Version=1
 X-KDevelop-Language=Fortran
 X-KDevelop-Args=g77
 X-KDevelop-Default=true
