--- a/plugins/gccoptions/kdevgppoptions.desktop
+++ b/plugins/gccoptions/kdevgppoptions.desktop
@@ -3,9 +3,16 @@ Encoding=UTF-8
 Type=Service
 Exec=g++
 Comment=GNU C++ Compiler
+Comment[hu]=GNU C++ fordítóprogram
+Comment[pt_BR]=Compilador GNU C++
+Comment[sv]=GNU C++ kompilator
+Comment[xx]=xxGNU C++ Compilerxx
 Name=GppOptions
+Name[sv]=Alternativ för g++
+Name[xx]=xxGppOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevgccoptions
+X-KDevelop-Version=1
 X-KDevelop-Language=C++
 X-KDevelop-Args=g++
 X-KDevelop-Default=true
