--- a/plugins/pgioptions/kdevpgf77options.desktop
+++ b/plugins/pgioptions/kdevpgf77options.desktop
@@ -3,8 +3,15 @@ Encoding=UTF-8
 Type=Service
 Exec=pgf77
 Comment=Portland Group Fortran77 Compiler
+Comment[hu]=Portland Group Fortran 77 fordítóprogram
+Comment[pt_BR]=Compilador Portland Group Fortran77
+Comment[sv]=Portland gruppens Fortran 77-kompilator
+Comment[xx]=xxPortland Group Fortran77 Compilerxx
 Name=Pgf77Options
+Name[sv]=Alternativ för pgf77
+Name[xx]=xxPgf77Optionsxx
 ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevpgioptions
+X-KDevelop-Version=1
 X-KDevelop-Language=Fortran
 X-KDevelop-Args=pgf77
