--- a/plugins/pgioptions/kdevpghpfoptions.desktop
+++ b/plugins/pgioptions/kdevpghpfoptions.desktop
@@ -3,8 +3,15 @@ Encoding=UTF-8
 Type=Service
 Exec=pghpf
 Comment=Portland Group High Performance Fortran compiler
+Comment[hu]=Portland Group nagyteljesítményű Fortran fordítóprogram
+Comment[pt_BR]=Compilador Portland Group Alta Performance
+Comment[sv]=Portland gruppens högprestanda Fortran 77-kompilator
+Comment[xx]=xxPortland Group High Performance Fortran compilerxx
 Name=PghpfOptions
+Name[sv]=Alternativ för pghpf
+Name[xx]=xxPghpfOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevpgioptions
+X-KDevelop-Version=1
 X-KDevelop-Language=Fortran
 X-KDevelop-Args=pghpf
