--- a/parts/appwizard/kdevpart/kdevpart.desktop
+++ b/parts/appwizard/kdevpart/kdevpart.desktop
@@ -3,8 +3,12 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=$APPNAME$
+Comment[xx]=xx$APPNAME$xx
 Name=KDev$APPNAME$
+Name[sv]=KDevelop $APPNAME$
+Name[xx]=xxKDev$APPNAME$xx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDevelop-Scope=Global
 X-KDE-Library=libkdev$APPNAMELC$
+X-KDevelop-Version=1
