--- a/parts/classview/kdevclassview.desktop
+++ b/parts/classview/kdevclassview.desktop
@@ -3,8 +3,19 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=This plugin displays a graphical view of all the classes in the project, complete with methods and attributes, and provides a way of direct source navigation.
+Comment[hu]=Bővítőmodul egy projekt osztályainak áttekintéséhez, a tagfüggvényekkel és az attribútumokkal együtt, navigálási lehetőséggel
+Comment[pt_BR]=Este plugin exibe uma visão gráfica de todas as classes no projeto, juntamente com métodos e atributos, e fornece uma maneira de navegar diretamente no código.
+Comment[sv]=Insticksprogrammet visar en grafisk bild av alla klasser i ett projekt, tillsammans med metoder och egenskaper, och ger möjlighet till direkt navigering i källkoden.
+Comment[xx]=xxThis plugin displays a graphical view of all the classes in the project, complete with methods and attributes, and provides a way of direct source navigation.xx
 Name=KDevClassView
+Name[sv]=KDevelop klassvisning
+Name[xx]=xxKDevClassViewxx
 GenericName=Class View
+GenericName[hu]=osztálynézegető
+GenericName[pt_BR]=Visualizador de Classe
+GenericName[sv]=Klassvisning
+GenericName[xx]=xxClass Viewxx
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevclassview
+X-KDevelop-Version=1
 X-KDevelop-Scope=Project
