--- a/parts/cvsservice/kdevcvsservice.desktop
+++ b/parts/cvsservice/kdevcvsservice.desktop
@@ -14,4 +14,5 @@ GenericName[xx]=xxCVS Integration using Cervisia's cvsservicexx
 Icon=misc
 ServiceTypes=KDevelop/VersionControl
 X-KDE-Library=libkdevcvsservice
+X-KDevelop-Version=1
 X-KDevelop-Scope=Global
