--- a/parts/fileselector/kdevpart_fileselector.desktop
+++ b/parts/fileselector/kdevpart_fileselector.desktop
@@ -3,7 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Powerful network transparent file browser utility.
-Comment[xx]=xxPowerful network transparent file browser utility.xx
 Name=KDevFileSelector
 Name[sv]=KDevelop filväljare
 Name[xx]=xxKDevFileSelectorxx
@@ -15,4 +14,5 @@ GenericName[xx]=xxFile Selectorxx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevfileselector
+X-KDevelop-Version=1
 X-KDevelop-Scope=Global
