--- a/parts/grepview/kdevgrepview.desktop
+++ b/parts/grepview/kdevgrepview.desktop
@@ -3,7 +3,6 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Integrates "find|grep" in KDevelop - allows fast searching of multiple files using patterns or regular expressions.
-Comment[xx]=xxIntegrates "find|grep" in KDevelop - allows fast searching of multiple files using patterns or regular expressions.xx
 Name=KDevGrepView
 Name[sv]=KDevelop grep-visning
 Name[xx]=xxKDevGrepViewxx
@@ -15,4 +14,5 @@ GenericName[xx]=xxGrep Frontendxx
 Icon=find
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevgrepview
+X-KDevelop-Version=1
 X-KDevelop-Scope=Global
