--- a/parts/javasupport/kdevjavasupport.desktop
+++ b/parts/javasupport/kdevjavasupport.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Java Support
-Comment[fr]=Un module externe pour la gestion du langage JAVA.
+Comment[hu]=Java-támogatás
+Comment[pt_BR]=Suporte ao Java
+Comment[sv]=Java-stöd
+Comment[xx]=xxJava Supportxx
 Name=KDevJavaSupport
+Name[sv]=KDevelop Java-stöd
+Name[xx]=xxKDevJavaSupportxx
 GenericName=Java Support
-GenericName[fr]=Langage JAVA
+GenericName[hu]=Java-támogatás
+GenericName[pt_BR]=Suporte ao Java
+GenericName[sv]=Java-stöd
+GenericName[xx]=xxJava Supportxx
 ServiceTypes=KDevelop/LanguageSupport
 X-KDE-Library=libkdevjavasupport
+X-KDevelop-Version=1
 X-KDevelop-Language=Java
 X-KDevelop-Args=Java
