--- a/parts/uimode/kdevpart_uichooser.desktop
+++ b/parts/uimode/kdevpart_uichooser.desktop
@@ -3,11 +3,20 @@ Encoding=UTF-8
 Type=Service
 Exec=blubb
 Comment=Provides a dialog for UI-mode selection.
-Comment[fr]=Un module externe pour le choix de l'interface utilisateur de KDevelop.
+Comment[hu]=Párbeszédablak a grafikus kezelési mód kiválasztásához
+Comment[pt_BR]=Fornece um diálogo para seleção modo-UI.
+Comment[sv]=Tillhandahåller en dialogruta för att välja läge för det grafiska gränssnittet.
+Comment[xx]=xxProvides a dialog for UI-mode selection.xx
 Name=KDevUIChooser
+Name[sv]=KDevelop gränssnittsväljare
+Name[xx]=xxKDevUIChooserxx
 GenericName=User-Interface Selection
-GenericName[fr]=Choix de l'interface utilisateur
+GenericName[hu]=felhasználói felület kiválasztása
+GenericName[pt_BR]=Seleção de Interface-Usuário
+GenericName[sv]=Användargränssnittsval
+GenericName[xx]=xxUser-Interface Selectionxx
 Icon=kdevelop
 ServiceTypes=KDevelop/Plugin
 X-KDE-Library=libkdevuichooser
+X-KDevelop-Version=1
 X-KDevelop-Scope=Core
