--- a/plugins/gccoptions/kdevgccoptions.desktop
+++ b/plugins/gccoptions/kdevgccoptions.desktop
@@ -3,9 +3,16 @@ Encoding=UTF-8
 Type=Service
 Exec=gcc
 Comment=GNU C Compiler
+Comment[hu]=GNU C fordítóprogram
+Comment[pt_BR]=Compilador GNU C
+Comment[sv]=GNU C-kompilator
+Comment[xx]=xxGNU C Compilerxx
 Name=GccOptions
+Name[sv]=Alternativ för gcc
+Name[xx]=xxGccOptionsxx
 ServiceTypes=KDevelop/CompilerOptions
 X-KDE-Library=libkdevgccoptions
+X-KDevelop-Version=1
 X-KDevelop-Language=C
 X-KDevelop-Args=gcc
 X-KDevelop-Default=true
