specify versioning and move stop action to a build toolbar

--- a/parts/haskellproject/kdevhaskellproject.desktop
+++ b/parts/haskellproject/kdevhaskellproject.desktop
@@ -7,3 +7,4 @@ Name=KDevHaskellProject
 GenericName=Haskell Project
 ServiceTypes=KDevelop/Project
 X-KDE-Library=libkdevhaskellproject
+X-KDevelop-Version=1
